--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ resume_api_usage_tracking.json
 candidate_fit_api_usage.json
 candidate_fit_cache.json
 resume_cache/
+grand-icon-466105-i3-116aa66edca7.json
