--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,12 +3,12 @@ nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-[program:redis]
+"""[program:redis]
 command=redis-server --bind 0.0.0.0 --port 6379 --maxmemory 128mb --maxmemory-policy allkeys-lru
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/supervisor/redis.log
-stderr_logfile=/var/log/supervisor/redis.log
+stderr_logfile=/var/log/supervisor/redis.log"""
 
 [program:fastapi]
 command=sh -c "uvicorn src.main:app --host 0.0.0.0 --port ${PORT:-8000}"
